--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="container my-auto">
     <div class="copyright text-center my-auto">
-        <span>Copyright &copy; Contractors 2020</span>
+        <p style="color: #ffffff;">&copy; Tradeviser Pty.Ltd. ALL RIGHTS RESERVED.</p>
     </div>
 </div>
 <!-- Logout Modal-->
