--- a/src/app/common/sidebar/sidebar.component.css
+++ b/src/app/common/sidebar/sidebar.component.css
@@ -1,3 +1,9 @@
 ul {
     height: 100%;
 }
+
+span {
+    font-size: 12px !important;
+    font-weight: 800 !important;
+    text-transform: uppercase !important;
+}
