--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,33 +1,45 @@
-<!-- <app-header></app-header>
-
-<div class="dashboard-container">
-  <div class="dashboard-content-container">
-
-    <app-sidebar></app-sidebar>
-
-    <div class="dashboard-content-inner">
-      <div class="container">
-
-        <router-outlet></router-outlet>
-
-      </div>
-
-      <app-footer></app-footer>
-      
-    </div>
-    
-  </div>
-</div> -->
 <div id="wrapper">
-  <app-sidebar></app-sidebar>
-  <div id="content-wrapper" class="d-flex flex-column">
+    <app-sidebar *ngIf="isAdmin != 'employee'"></app-sidebar>
+    <div id="content-wrapper" class="d-flex flex-column">
 
-  <!-- Main Content -->
-  <div id="content">
-    <app-header></app-header>
-    <router-outlet></router-outlet>
-  </div>
-  <app-footer></app-footer>
-</div>
-<!-- End of Content Wrapper -->
+        <!-- Main Content -->
+        <div id="content">
+            <app-header *ngIf="isAdmin != 'employee'"></app-header>
+            <nav *ngIf="isAdmin == 'employee'" class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+                <a class="navbar-brand" style="margin:0px">
+                    <img style="width: 75px;" src="/assets/static/image.png">
+                </a>
+
+
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                            <a (click)="closeNav()" class="nav-link" [routerLink]="['/dashboard/Employeejobs']">Jobs</a>
+                        </li>
+                        <li class="nav-item" routerLinkActive="active">
+                            <a (click)="closeNav()" class="nav-link" [routerLink]="['/dashboard/calendar']">Calendar</a>
+                        </li>
+                        <li class="nav-item" routerLinkActive="active">
+                            <a class="nav-link" (click)="closeNav()" [routerLink]="['/dashboard/signature']">
+                      Update Your Signatue
+                    </a>
+                        </li>
+                        <li class="nav-item" routerLinkActive="active">
+                            <a (click)="closeNav()" class="nav-link" [routerLink]="['profile/updatePass']">Update Password</a>
+                        </li>
+                        <li class="nav-item" routerLinkActive="active">
+                            <a class="nav-link" (click)="logout()">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <router-outlet></router-outlet>
+        </div>
+        <app-footer></app-footer>
+    </div>
+    <!-- End of Content Wrapper -->
 </div>
