--- a/src/app/components/dashboard/jobs/jobs.component.html
+++ b/src/app/components/dashboard/jobs/jobs.component.html
@@ -20,39 +20,32 @@
                 <table class="table table-bordered" datatable id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
+                            <th>JOB_Id</th>
                             <th>Title</th>
                             <th>Client Name</th>
-                            <th>Address</th>
-                            <th>Phone</th>
                             <th>Date</th>
                             <th>Time</th>
                             <th>Employee</th>
                             <th>Action</th>
                         </tr>
                     </thead>
-                    <tfoot>
-                        <tr>
-                            <th>Title</th>
-                            <th>Client Name</th>
-                            <th>Address</th>
-                            <th>Phone</th>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Employee</th>
-                            <th>Action</th>
-                        </tr>
-                    </tfoot>
                     <tbody>
                         <tr *ngFor="let job of jobs">
+                            <td>
+                                <a [routerLink]="['/dashboard/jobdetails',job.id]">
+                                J{{ padLeft(job.id, '0', 5)}}
+                              </a>
+                            </td>
                             <td>{{job.title}}</td>
                             <td>{{job.client_name}}</td>
-                            <td>{{job.client_address}}</td>
-                            <td>{{job.client_phone}}</td>
-                            <td>{{job.date}}</td>
-                            <td>{{job.time}}</td>
-                            <td>{{job.employee_id}}</td>
+                            <td>{{ job.date | date: 'dd-MM-yyyy' }}</td>
+                            <td>{{timeFormat(job.time)}}</td>
+                            <td>
+                                <div *ngFor="let item of job.jobassigned">{{item.employees.f_name + ' ' + item.employees.l_name }}, </div>
+                            </td>
                             <td>
                                 <div class="text-center">
+                                    <a [routerLink]="['/dashboard/jobdetails',job.id]" routerLinkActive="router-link-active"><button title="Edit" class="btn btn-primary fa fa-eye"></button></a>
                                     <a [routerLink]="['/dashboard/create-job',job.id]" routerLinkActive="router-link-active"><button title="Edit" class="btn btn-primary fa fa-edit"></button></a>
                                     <a><button title="Delete" class="btn btn-danger fa fa-trash-alt" (click)="openDialog(job.id)"></button></a>
                                 </div>
@@ -63,6 +56,5 @@
             </div>
         </div>
     </div>
-
 </div>
 <ngx-spinner></ngx-spinner>
